// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drag and show left part 1`] = `
<div class="van-swipe-cell">
  <div class="van-swipe-cell__wrapper" style="transform: translate3d(0px, 0, 0); transition: .6s cubic-bezier(0.18, 0.89, 0.32, 1);">
    <div class="van-swipe-cell__left"></div>
    <div class="van-swipe-cell__right"></div>
  </div>
</div>
`;

exports[`drag and show left part 2`] = `
<div class="van-swipe-cell">
  <div class="van-swipe-cell__wrapper" style="transform: translate3d(100px, 0, 0); transition: .6s cubic-bezier(0.18, 0.89, 0.32, 1);">
    <div class="van-swipe-cell__left"></div>
    <div class="van-swipe-cell__right"></div>
  </div>
</div>
`;

exports[`drag and show left part 3`] = `
<div class="van-swipe-cell">
  <div class="van-swipe-cell__wrapper" style="transform: translate3d(100px, 0, 0); transition: .6s cubic-bezier(0.18, 0.89, 0.32, 1);">
    <div class="van-swipe-cell__left"></div>
    <div class="van-swipe-cell__right"></div>
  </div>
</div>
`;

exports[`drag and show left part 4`] = `
<div class="van-swipe-cell">
  <div class="van-swipe-cell__wrapper" style="transform: translate3d(100px, 0, 0); transition: .6s cubic-bezier(0.18, 0.89, 0.32, 1);">
    <div class="van-swipe-cell__left"></div>
    <div class="van-swipe-cell__right"></div>
  </div>
</div>
`;

exports[`drag and show right part 1`] = `
<div class="van-swipe-cell">
  <div class="van-swipe-cell__wrapper" style="transform: translate3d(-100px, 0, 0); transition: .6s cubic-bezier(0.18, 0.89, 0.32, 1);">
    <div class="van-swipe-cell__left"></div>
    <div class="van-swipe-cell__right"></div>
  </div>
</div>
`;

exports[`width equals zero 1`] = `
<div class="van-swipe-cell">
  <div class="van-swipe-cell__wrapper" style="transform: translate3d(0px, 0, 0); transition: .6s cubic-bezier(0.18, 0.89, 0.32, 1);"></div>
</div>
`;
